--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
   <groupId>com.streamsets</groupId>
   <artifactId>streamsets-datacollector-plugin-api</artifactId>
-  <version>3.17.1</version>
+  <version>3.17.1-0030</version>
   <description>StreamSets Data Collector Plugin API</description>
   <modules>
     <module>streamsets-datacollector-spark-api</module>
